force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/PM_EXPENSE_SHEET_HD__x.object-meta.xml
<CustomObject>
    <description>PM_EXPENSE_SHEET_HD</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>PM_EXPENSE_SHEET_HD</externalName>
    <label>PM_EXPENSE_SHEET_HD</label>
    <pluralLabel>PM_EXPENSE_SHEET_HD</pluralLabel>
</CustomObject>