force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/ACK_BY__c.field-meta.xml
<CustomField>
    <fullName>ACK_BY__c</fullName>
    <description>ACK_BY</description>
    <externalDeveloperName>ACK_BY</externalDeveloperName>
    <label>ACK_BY</label>
    <length>8</length>
    <type>Text</type>
</CustomField>