force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/ACK_DATE__c.field-meta.xml
<CustomField>
    <fullName>ACK_DATE__c</fullName>
    <description>ACK_DATE</description>
    <externalDeveloperName>ACK_DATE</externalDeveloperName>
    <label>ACK_DATE</label>
    <type>DateTime</type>
</CustomField>