force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/ACK_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ACK_FLAG__c</fullName>
    <description>ACK_FLAG</description>
    <externalDeveloperName>ACK_FLAG</externalDeveloperName>
    <label>ACK_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>