force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/ADVANCE_AMT__c.field-meta.xml
<CustomField>
    <fullName>ADVANCE_AMT__c</fullName>
    <description>ADVANCE_AMT</description>
    <externalDeveloperName>ADVANCE_AMT</externalDeveloperName>
    <label>ADVANCE_AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>