force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/AMOUNT_PAID__c.field-meta.xml
<CustomField>
    <fullName>AMOUNT_PAID__c</fullName>
    <description>AMOUNT_PAID</description>
    <externalDeveloperName>AMOUNT_PAID</externalDeveloperName>
    <label>AMOUNT_PAID</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>