force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/APPROVER_ID__c.field-meta.xml
<CustomField>
    <fullName>APPROVER_ID__c</fullName>
    <description>APPROVER_ID</description>
    <externalDeveloperName>APPROVER_ID</externalDeveloperName>
    <label>APPROVER_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>