force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/BATCH_NO__c.field-meta.xml
<CustomField>
    <fullName>BATCH_NO__c</fullName>
    <description>BATCH_NO</description>
    <externalDeveloperName>BATCH_NO</externalDeveloperName>
    <label>BATCH_NO</label>
    <length>12</length>
    <type>Text</type>
</CustomField>