force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/BILL_REF_NO__c.field-meta.xml
<CustomField>
    <fullName>BILL_REF_NO__c</fullName>
    <description>BILL_REF_NO</description>
    <externalDeveloperName>BILL_REF_NO</externalDeveloperName>
    <label>BILL_REF_NO</label>
    <length>15</length>
    <type>Text</type>
</CustomField>