force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/EXP_END_DATE__c.field-meta.xml
<CustomField>
    <fullName>EXP_END_DATE__c</fullName>
    <description>EXP_END_DATE</description>
    <externalDeveloperName>EXP_END_DATE</externalDeveloperName>
    <label>EXP_END_DATE</label>
    <type>DateTime</type>
</CustomField>