force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/FLAG_REIMBURS__c.field-meta.xml
<CustomField>
    <fullName>FLAG_REIMBURS__c</fullName>
    <description>FLAG_REIMBURS</description>
    <externalDeveloperName>FLAG_REIMBURS</externalDeveloperName>
    <label>FLAG_REIMBURS</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>