force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/FLAG_SETTLE__c.field-meta.xml
<CustomField>
    <fullName>FLAG_SETTLE__c</fullName>
    <description>FLAG_SETTLE</description>
    <externalDeveloperName>FLAG_SETTLE</externalDeveloperName>
    <label>FLAG_SETTLE</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>