force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/FLG_APPROVED__c.field-meta.xml
<CustomField>
    <fullName>FLG_APPROVED__c</fullName>
    <description>FLG_APPROVED</description>
    <externalDeveloperName>FLG_APPROVED</externalDeveloperName>
    <label>FLG_APPROVED</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>