force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/FLG_EXPSCRN__c.field-meta.xml
<CustomField>
    <fullName>FLG_EXPSCRN__c</fullName>
    <description>FLG_EXPSCRN</description>
    <externalDeveloperName>FLG_EXPSCRN</externalDeveloperName>
    <label>FLG_EXPSCRN</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>