force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/FLG_SUBMIT__c.field-meta.xml
<CustomField>
    <fullName>FLG_SUBMIT__c</fullName>
    <description>FLG_SUBMIT</description>
    <externalDeveloperName>FLG_SUBMIT</externalDeveloperName>
    <label>FLG_SUBMIT</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>