force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/IS_CHARGEABLE__c.field-meta.xml
<CustomField>
    <fullName>IS_CHARGEABLE__c</fullName>
    <description>IS_CHARGEABLE</description>
    <externalDeveloperName>IS_CHARGEABLE</externalDeveloperName>
    <label>IS_CHARGEABLE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>