force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/NOTES__c.field-meta.xml
<CustomField>
    <fullName>NOTES__c</fullName>
    <description>NOTES</description>
    <externalDeveloperName>NOTES</externalDeveloperName>
    <label>NOTES</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>