force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/PAY_BY__c.field-meta.xml
<CustomField>
    <fullName>PAY_BY__c</fullName>
    <description>PAY_BY</description>
    <externalDeveloperName>PAY_BY</externalDeveloperName>
    <label>PAY_BY</label>
    <length>8</length>
    <type>Text</type>
</CustomField>