force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/PAY_NO__c.field-meta.xml
<CustomField>
    <fullName>PAY_NO__c</fullName>
    <description>PAY_NO</description>
    <externalDeveloperName>PAY_NO</externalDeveloperName>
    <label>PAY_NO</label>
    <length>15</length>
    <type>Text</type>
</CustomField>