force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/REASON_SETTLEMENT__c.field-meta.xml
<CustomField>
    <fullName>REASON_SETTLEMENT__c</fullName>
    <description>REASON_SETTLEMENT</description>
    <externalDeveloperName>REASON_SETTLEMENT</externalDeveloperName>
    <label>REASON_SETTLEMENT</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>