force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/REF_JV_NO__c.field-meta.xml
<CustomField>
    <fullName>REF_JV_NO__c</fullName>
    <description>REF_JV_NO</description>
    <externalDeveloperName>REF_JV_NO</externalDeveloperName>
    <label>REF_JV_NO</label>
    <length>12</length>
    <type>Text</type>
</CustomField>