force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/REJECTED_EXP_ID__c.field-meta.xml
<CustomField>
    <fullName>REJECTED_EXP_ID__c</fullName>
    <description>REJECTED_EXP_ID</description>
    <externalDeveloperName>REJECTED_EXP_ID</externalDeveloperName>
    <label>REJECTED_EXP_ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>