force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/SETTLE_DATE__c.field-meta.xml
<CustomField>
    <fullName>SETTLE_DATE__c</fullName>
    <description>SETTLE_DATE</description>
    <externalDeveloperName>SETTLE_DATE</externalDeveloperName>
    <label>SETTLE_DATE</label>
    <type>DateTime</type>
</CustomField>