force-app/main/default/objects/PM_EXPENSE_SHEET_HD__x/fields/TRAVEL_REQ_REF_NO__c.field-meta.xml
<CustomField>
    <fullName>TRAVEL_REQ_REF_NO__c</fullName>
    <description>TRAVEL_REQ_REF_NO</description>
    <externalDeveloperName>TRAVEL_REQ_REF_NO</externalDeveloperName>
    <label>TRAVEL_REQ_REF_NO</label>
    <length>12</length>
    <type>Text</type>
</CustomField>